--- a/ElevenNote.WebMVC/Views/Note/Index.cshtml
+++ b/ElevenNote.WebMVC/Views/Note/Index.cshtml
@@ -9,8 +9,22 @@
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
+
+@if(TempData.ContainsKey("SaveResult"))
+{ 
+<div class="alert alert-success fade in" role="alert">
+    @ViewBag.SaveResult
+    <button type="button" class="close" data-dismiss="alert">
+        <span>&times;</span>
+    </button>
+    @TempData["SaveResult"]
+</div>
+}
 <table class="table">
     <tr>
+        <th>
+            @Html.DisplayNameFor(model => model.NoteId)
+        </th>
         <th>
             @Html.DisplayNameFor(model => model.Title)
         </th>
