Added Edit Method

--- a/ElevenNote.WebMVC/Views/Note/Index.cshtml
+++ b/ElevenNote.WebMVC/Views/Note/Index.cshtml
@@ -43,7 +43,8 @@
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.NoteId }) |
-            @Html.ActionLink("Details", "Details", new { id=item.NoteId }) |
+            @Html.ActionLink("Details", "Details", new { id=item.NoteId })
+            |
             @Html.ActionLink("Delete", "Delete", new { id=item.NoteId })
         </td>
     </tr>
