Added Comments Updated Star Method

--- a/ElevenNote.WebMVC/Views/Note/Index.cshtml
+++ b/ElevenNote.WebMVC/Views/Note/Index.cshtml
@@ -10,15 +10,15 @@
     @Html.ActionLink("Create New", "Create")
 </p>
 
-@if(TempData.ContainsKey("SaveResult"))
-{ 
-<div class="alert alert-success fade in" role="alert">
-    @ViewBag.SaveResult
-    <button type="button" class="close" data-dismiss="alert">
-        <span>&times;</span>
-    </button>
-    @TempData["SaveResult"]
-</div>
+@if (TempData.ContainsKey("SaveResult"))
+{
+    <div class="alert alert-success fade in" role="alert">
+        @ViewBag.SaveResult
+        <button type="button" class="close" data-dismiss="alert">
+            <span>&times;</span>
+        </button>
+        @TempData["SaveResult"]
+    </div>
 }
 <table class="table">
     <tr>
@@ -33,25 +33,25 @@
         </th>
     </tr>
 
-@foreach (var item in Model) {
-<tr>
-    <td>
-        @Html.DisplayFor(modelItem => item.Title)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.IsStarred, new { Id = item.NoteId })
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.CreatedUtc)
-    </td>
-    <td>
-        @Html.ActionLink("Edit", "Edit", new { id = item.NoteId }) |
-        @Html.ActionLink("Details", "Details", new { id = item.NoteId })
-        |
-        @Html.ActionLink("Delete", "Delete", new { id = item.NoteId })
-    </td>
-</tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Title)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.IsStarred, new { Id = item.NoteId })
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.CreatedUtc)
+            </td>
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { id = item.NoteId }) |
+                @Html.ActionLink("Details", "Details", new { id = item.NoteId })
+                @Html.ActionLink("Delete", "Delete", new { id = item.NoteId })
+            </td>
+        </tr>
+    }
 
 </table>
 
@@ -63,22 +63,21 @@
                 .click(function (e) {
                     var target = $(e.target);
                     var noteId = target.attr("data-id");
-                    var starSet = target.HasClass("glyphicon-star");
+                    var starSet = target.hasClass("glyphicon-star");
 
                     $.ajax({
-                        method: startSet ? "DELETE" : "PUT",
+                        method: starSet ? "DELETE" : "PUT",
                         url: "/api/note/" + noteId + "/star",
                         data: null
                     })
                         .done(function (r) {
                             target.removeClass();
                             target.addClass("glyphicon " + (starSet ? "glyphicon-star-empty" : "glyphicon-star"));
-                        }
-                            .fail(function (r) {
-                                alert("Failed to change star status");
-                            });
-                });           
+                        })
+                        .fail(function (r) {
+                            alert("Failed to change star status");
+                        });
+                });
         });
     </script>
-}
 }
