--- a/ElevenNote.WebMVC/Views/Home/Index.cshtml
+++ b/ElevenNote.WebMVC/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
 
 <div class="jumbotron">
     <h1>Oh-Yeah!</h1>
-    <p class="lead">Oh-Yeah!</h1> Oh-Yeah! is a the convient way to keep track of all of your important information. Be it Notes, Shopping list, chores, etc Oh-Yeah! is here to make keeping track of information easy!</p>
+    <p class="lead">Oh-Yeah! is a the convient way to keep track of all of your important information. Be it Notes, Shopping list, chores, etc Oh-Yeah! is here to make keeping track of information easy!</p>
     <p><a href="https://localhost:44357/Note/Create" class="btn btn-primary btn-lg">Compose Note &raquo;</a></p>
 </div>
 
