--- a/ElevenNote.WebMVC/Views/Home/Index.cshtml
+++ b/ElevenNote.WebMVC/Views/Home/Index.cshtml
@@ -1,29 +1,32 @@
 ﻿@{
     ViewBag.Title = "Home Page";
 }
+<body style="background-color:rosybrown">
 
-<div class="jumbotron">
-    <h1>Oh-Yeah!</h1>
-    <p class="lead">Oh-Yeah! is a the convient way to keep track of all of your important information. Be it Notes, Shopping list, chores, etc Oh-Yeah! is here to make keeping track of information easy!</p>
-    <p><a href="https://localhost:44357/Note/Create" class="btn btn-primary btn-lg">Compose Note &raquo;</a></p>
-</div>
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Make a New Note</h2>
-        <p>
-            Here you can quickly compose a new note for yourself. Try it out!
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Compose Note &raquo;</a></p>
+    <div class="jumbotron" style="background-color:tan">
+        <h1>Oh-Yeah!</h1>
+        <p class="lead">Oh-Yeah! is a the convient way to keep track of all of your important information. Be it Notes, Shopping list, chores, etc Oh-Yeah! is here to make keeping track of information easy!</p>
+        <p><a href="https://localhost:44357/Note/Create" class="btn btn-primary btn-lg">Compose Note &raquo;</a></p>
     </div>
-    <div class="col-md-4">
-        <h2>Coming Soon</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Coming Soon &raquo;</a></p>
+
+    <div class="row">
+        <div class="col-md-4">
+            <h2>Make a New Note</h2>
+            <p>
+                Here you can quickly compose a new note for yourself. Try it out!
+            </p>
+            <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Compose Note &raquo;</a></p>
+        </div>
+        <div class="col-md-4">
+            <h2>Coming Soon</h2>
+            <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
+            <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Coming Soon &raquo;</a></p>
+        </div>
+        <div class="col-md-4">
+            <h2>Coming Soon</h2>
+            <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
+            <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Coming Soon &raquo;</a></p>
+        </div>
     </div>
-    <div class="col-md-4">
-        <h2>Coming Soon</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Coming Soon &raquo;</a></p>
-    </div>
-</div>
+</body>
